fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ a{
 
 img{
    max-width: 100%;
+   max-height: 100%;
 }
 
 .wrapper {
@@ -38,7 +39,7 @@ img{
     margin: 0 auto;
 }
 .hero--info{
-    height: 700px;
+    height: 500px;
 }
 
 ul{
